# helloCMake

./: CMakeLists.txt  README.md  build.sh  main.cpp
